RESOLVED FIXED207945
[LFC][IFC] Anonymous inline text box container is not the only type of anonymous containers
https://bugs.webkit.org/show_bug.cgi?id=207945
Summary [LFC][IFC] Anonymous inline text box container is not the only type of anonym...
alan
Reported 2020-02-19 09:09:31 PST
for example first-letter initiates anonymous inline containers as well
Attachments
Patch (7.05 KB, patch)
2020-02-19 09:22 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2020-02-19 09:10:21 PST
alan
Comment 2 2020-02-19 09:22:30 PST
WebKit Commit Bot
Comment 3 2020-02-19 10:15:07 PST
Comment on attachment 391171 [details] Patch Clearing flags on attachment: 391171 Committed r256924: <https://trac.webkit.org/changeset/256924>
WebKit Commit Bot
Comment 4 2020-02-19 10:15:09 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.