[LFC][IFC] Anonymous inline text box container is not the only type of anonymous containers https://bugs.webkit.org/show_bug.cgi?id=207945 <rdar://problem/59592411>

Reviewed by Antti Koivisto.

Source/WebCore:

Test: fast/layoutformattingcontext/anonymous-inline-container-simple.html

We construct anonymous inline containers for certain features like first-letter.

* layout/inlineformatting/InlineFormattingContext.cpp:
(WebCore::Layout::nextInlineLevelBoxToLayout):
(WebCore::Layout::InlineFormattingContext::layoutInFlowContent):
(WebCore::Layout::InlineFormattingContext::computedIntrinsicWidthConstraints):
(WebCore::Layout::InlineFormattingContext::collectInlineContentIfNeeded):

LayoutTests:

* fast/layoutformattingcontext/anonymous-inline-container-simple-expected.html: Added.
* fast/layoutformattingcontext/anonymous-inline-container-simple.html: Added.


Canonical link: https://commits.webkit.org/220920@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256924 268f45cc-cd09-0410-ab3c-d52691b4dbfc